# Cuda-Optimization-for-SpMM

./: .clangd  .gitignore  CMakeLists.txt  README.md
analysis_new/: analysis_new.ipynb  bsr_new.json  coo_new.json  csr_new.json  sparsity.json
code/: matrix_explorer.ipynb
code/coo_multiply/: Makefile  coo_multiply.cpp  coo_multiply.cu
code/data/small_10x10/: sparse.coo
code/data/small_32x32/: Hamrle1.csc  Hamrle1.csr
code/python_utils/: Readme.md  convert_mtx.py  validate.py
code/small_10x10/: dense.in
code/utils/: read_matrix.cpp
data/small_10x10/: coo_cuda.out  result.expect  sparse.csr
data/small_32x32/: Hamrle1.coo  coo_cuda.out  dense.in  result.expect
include/: commons.hpp  cuda_utils.hpp  engine.hpp  format.hpp  loader.hpp  spmm_bsr.hpp  spmm_coo.hpp  spmm_csr.hpp  spmm_cusparse.hpp  spmm_ell.hpp  utils.hpp
include/engine/: cusparse.hpp  engine_base.hpp  engine_bsr.hpp  engine_coo.hpp  engine_csr.hpp  engine_ell.hpp
include/formats/: dense.hpp  matrix.hpp  sparse_bsr.hpp  sparse_coo.hpp  sparse_csr.hpp  sparse_ell.hpp
scripts/: data.sh
src/: loader.cpp  main.cpp  main.cu  spmm_bsr.cpp  spmm_bsr.cu  spmm_coo.cpp  spmm_coo.cu  spmm_csr.cpp  spmm_csr.cu  spmm_ell.cpp  spmm_ell.cu
src/engine/: cusparse.cu  engine.cpp
src/formats/: dense.cu  sparse_bsr.cu  sparse_coo.cu  sparse_csr.cu  sparse_ell.cu
test/: bsr.sh  coo.sh  csr.sh  sparsity.sh
utils/: matrix_explorer.ipynb
utils/python_utils/: Readme.md  convert_matrix.py  convert_mtx.py  format_timing_results.py  gen_matrix.py  gen_sparse.py  validate.py
utils/utils/: Makefile
(+12 files in other folders)
